--- a/verlen.ini
+++ b/verlen.ini
@@ -1,5 +1,5 @@
 [UPD]
 v=1
 build=1
-des= Добавлено автообновление и пароль
-upd= В написании
+des= Добавлено визуальное меню биндов и сохранение пароля после ввода
+upd= ...
